2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* multiop.setup: Moved the common setup code for the testing of
	* multiop.test: the multi-file operations into a separate file.
	* multi.test: Added commands to query the state of objects.
	* multiop.tcl: Updated both testsuite and documentation. Version
	* multiop.man: bumped to 0.5.
	* pkgIndex.tcl:

2007-08-15  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl (ChDir, ChUp): Fixed the method calls in change dir
	* multiop.man: operations, forget the $self. Version bumped to 0.4.
	* pkgIndex.tcl:

2007-08-13  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl (Expand): Fixed bug in recursive expansion, pattern
	  applies to the last segment of the path.

	* multiop.tcl: New features coming out of dog-fooding: Removed
	* multiop.man: hardwired fixation on files, accept all paths by
	* multiop.test: default, and added commands to allow the user to
	* multi.test: limit the expansion to files, firectories, or links.
	* pkgIndex.tcl: New command to allow the user to specify how
	  strict checking of the 'in(to)' argument is, and if empty
	  expansions are acceptable. Documentation updated. Testsuite
	  updated and extended. Version bumped to 0.3

2007-08-10  Andreas Kupries  <andreask@activestate.com>

	* multiop.tcl: New features - Recursive processing.
	* multiop.test: Expand only mode. Save/restore set of files
	* pkgIndex.tcl: to/from a variable. Platform checking
	* multi.test: semi-conditional commands. Invoke a user command for
	* multiop.man: the file set. Test suite extended, documentation
	  updated. Version bumped to 0.2

	* fileutil.tcl: The rewrite of find changed how it invoked the
	* fileutil.man: filter command. As that however is documented this
	* pkgIndex.tcl: change is a bug. Restored the old way of invoking