@@ -4,7 +4,7 @@
 # Copyright (c) 2007 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: find.setup,v 1.1 2007/08/08 19:42:43 andreas_kupries Exp $
+# RCS: @(#) $Id: find.setup,v 1.2 2007/10/24 19:28:36 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -96,6 +96,64 @@ proc f_setupcircle {} {
     return
 }
 
+# Extend the regular sample tree with a broken symbolic link. Unix-only.
+#
+#	dir
+#	+--{find 1}
+#          +--{find 2}
+#          |  +--{file* 2}
+#          |  +--{file 3} --> BROKEN
+#          +--{file [1]}
+
+
+proc f_setupbroken {} {
+    f_setup
+
+    set fthree [file join {find 1} {find 2} {file 3}]
+    set path   [makeFile "" $fthree]
+    removeFile $fthree
+
+    # Added use of 'file link' for Tcl 8.4+, on windows, to have a
+    # modicum of x-platform testing regarding the handling of symbolic
+    # links.
+
+    set target BROKEN
+
+    if {
+	[string equal $::tcl_platform(platform) windows] &&
+	[package vsatisfies [package require Tcl] 8.4]
+    } {
+	makeFile {} [file dirname $fthree]/BROKEN
+
+	if {[string equal $::tcl_platform(platform) windows]} {
+	    # Windows doesn't like the .. in the target, it needs an
+	    # absolute path.
+
+	    # NOTE/BUG Even so the 'fullnormalize' in the traverser
+	    # returns bogus results for the link, whereas use of file
+	    # normalize and fullnormalize in a simple tclsh,
+	    # i.e. outside of the testing is ok.
+
+	    # It seems if the 'file join' in fullnormalize is replaced
+	    # by a plain / then the results are ok again => The
+	    # handling of paths on Windows by the Tcl core is bogus in
+	    # some way which breaks the core 'normalize'.
+
+	    set here [pwd]
+	    cd [file dirname [tempPath $fthree]]
+	    file link [file tail $fthree] [file normalize $target]
+	    cd $here
+	} else {
+	    file link [tempPath $fthree] $target
+	}
+	removeFile [file dirname $fthree]/BROKEN
+	return
+    }
+
+    exec ln -s $target [tempPath $fthree]
+    return
+}
+
 proc f_setupdot {} {
     makeDirectory          dotfiles
     makeFile "" [file join dotfiles foo]
@@ -109,9 +167,9 @@ proc f_cleanupdot {} {
 }
 
 proc f_setupnostat {} {
-    # Finding inaccessible directories (unix only) (I do not know howe
-    # make the directory inaccessible on Windows, and then
-    # reaccessible again).
+    # Finding inaccessible directories. Uunix only, as I do not know
+    # how to make the directory inaccessible on Windows, and then
+    # reaccessible again.
 
     makeDirectory find3
     makeDirectory find3/find4
