@@ -1,9 +1,9 @@
 [comment {-*- text -*- doctools manpage}]
-[manpage_begin fileutil_traverse n 0.3]
+[manpage_begin fileutil_traverse n 0.4]
 [moddesc   {file utilities}]
 [titledesc {Iterative directory traversal}]
 [require Tcl 8.3]
-[require fileutil::traverse [opt 0.3]]
+[require fileutil::traverse [opt 0.4]]
 [description]
 [keywords {directory traversal} traversal]
 [para]
